Random Forest Regression
Signed-off-by: Prajwol Man Shakya <shakyaprajwol96@gmail.com>

--- a/Part 2 - Regression/Section 8 - Decision Tree Regression/decision_tree_regression_mine.ipynb
+++ b/Part 2 - Regression/Section 8 - Decision Tree Regression/decision_tree_regression_mine.ipynb
@@ -88,15 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fitting the Regression Model to the dataset\n",
+    "# Fitting the Random Forest Regression Model to the dataset\n",
     "# Create your regressor here\n",
     "\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    ""
+    "from sklearn.tree import DecisionTreeRegressor\n"
    ]
   },
   {
@@ -115,8 +114,7 @@
    ],
    "source": [
     "regressor = DecisionTreeRegressor(random_state=0)\n",
-    "regressor.fit(X,y)\n",
-    ""
+    "regressor.fit(X,y)\n"
    ]
   },
   {
